Fixed chart alignment.

--- a/src/app/stylesheets/_custom.scss
+++ b/src/app/stylesheets/_custom.scss
@@ -184,3 +184,5 @@ md-table-container {
     width: 300px;
   }
 }
+
+.fixed-height-widget > div { margin: 0; }
